--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.3"
+    "multer": "^1.4.3",
+    "exceljs": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
